# CSE-167-Computer-Graphics

./: .gitignore  15-462_CMU_Graphics.md  CMakeLists.txt  CSE167_notes.md  README.md  learnopengl.md
src/: CMakeLists.txt  CSE167_notes.md  example.cpp  example2.cpp  example3.cpp
src/learnopengl/: CMakeLists.txt  glad.c
src/learnopengl/getting_started/: getting_started.cpp  getting_started.hpp  hello_rectangle.cpp  hello_triangle.cpp  hello_triangle_exercise.cpp  hello_window.cpp  shader_s.hpp  shaders.cpp  textures.cpp
